--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,12 +1,12 @@
 [Params]
 tokenizer_mode = bert-base-cased
 classification_mode = bert-base-cased
-dataset = data/raw/paired_data/data-clipped/data-train.jsonl
-csvfile = data/interim/sample_train.csv
+dataset = data/processed/paired_data/data-clipped/data-train.jsonl
+csvfile = data/interim/train-250k.csv
 target_emotion = anger
 
 max_features = 25000  
 maxlen = 512  
-batchsize = 100
-num_epochs = 1
-steps = 2
+batchsize = 64
+num_epochs = 6
+steps = 12
