--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@
 
 # external requirements
 click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+tensorflow>=2.0
+torch
+transformers
+diskcache
+numpy
+pandas
+python>=3.6
