try_factcc.py done

--- a/src/factcc/try_factcc.cfg
+++ b/src/factcc/try_factcc.cfg
@@ -1,7 +1,7 @@
 [Params]
 dataset = data/processed/paired_data/data-clipped/data-train.jsonl
-csvfile =  data/interim/sample_train_1k_fromclipped.csv
-testcsvfile = data/interim/sample_train_1k_fromclipped.csv
+csvfile =  data/interim/sample_1k.csv
+testcsvfile = data/interim/sample_1k.csv
 
 cache_dir = data/interim/model_cache
 tf_cache_dir = data/interim/tf_cache
